[project]
name = "emoji-dedup"
version = "0.1.0"
description = "Find and remove duplicate emoji files using perceptual hashing"
requires-python = ">=3.11"
dependencies = [
    "imagehash>=4.3",
    "Pillow>=10.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[tool.ruff]
target-version = "py311"
line-length = 120

[project.scripts]
dedup = "dedup:main"
